--- a/cloudformation/application.yml
+++ b/cloudformation/application.yml
@@ -450,6 +450,8 @@ Resources:
       ManagedPolicyArns:
         - !Ref CodeDeployEC2S3
         - !Ref AccessAttachmentToS3Bucket
+        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+        - arn:aws:iam::aws:policy/AmazonSNSFullAccess
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
