--- a/cloudformation/application.yml
+++ b/cloudformation/application.yml
@@ -797,3 +797,39 @@ Resources:
         - Key: Name
           Type: KEY_AND_VALUE
           Value: EC2-CODEDEPLOY
+########## SNS 
+  lambdaexecutionrole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      RoleName: lambdaRole
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess'
+        - 'arn:aws:iam::aws:policy/AmazonSESFullAccess'
+        - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
+        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
+        - 'arn:aws:iam::aws:policy/AmazonSNSFullAccess'
+  lambadaLoggingPolicies:
+    Type: 'AWS::IAM::Policy'
+    Properties:
+      PolicyName: LambdaLogsPolicy
+      Roles:
+        - !Ref lambdaexecutionrole
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action:
+              - 'logs:CreateLogGroup'
+              - 'logs:CreateLogStream'
+              - 'logs:PutLogEvents'
+            Effect: Allow
+            Resource: 'arn:aws:logs:*:*:*'
+ 
