--- a/cloudformation/application.yml
+++ b/cloudformation/application.yml
@@ -857,7 +857,7 @@ Resources:
     Properties:
       AttributeDefinitions:
         - AttributeName: id
-          AttributeType: String
+          AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
